# Fastapi-Template

./: .gitignore  Makefile  README.md  create_router.sh  pyproject.toml  ruff.toml
app/: main.py
app/core/: config.py  logging.py
app/db/: database.py
prisma/: schema.prisma
