[project]
name = "fastapitemplate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]>=0.115.8",
    "loguru>=0.7.3",
    "prisma>=0.15.0",
    "pytest>=8.3.4",
]

[dependency-groups]
dev = [
    "pyright>=1.1.394",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]
